# app_basic

./: .auth-test.txt  .axiom-test  .gh-app-test  .kanban-test.md  .main-protection-test  .test-backlog-red.md  LICENSE  README.md  agent-daemon.js  book.toml
.github/workflows/: kanban-automation.yml  sync-wiki.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/github/: client.rs  mod.rs  token.rs
doc/: README.md  SUMMARY.md
doc/requirements/: REQ-001.md
frontend/: Cargo.toml  index.html  style.css
frontend/design/: colors.json
frontend/src/: board.rs  card.rs  main.rs  nlp_panel.rs  theme.rs  types.rs
frontend/src/components/: loading.rs
lib/: requirement-validator.js
systemd/: axiom-agent.service
webhook-server/: .env.example  package.json  server.js
wiki/: Architecture.md  Home.md  Quick-Start.md  The-TDD-Flow.md  Troubleshooting.md  Why-Labels.md
