[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0.139"
anyhow = "1.0"
jsonwebtoken = "9"
chrono = "0.4"
urlencoding = "2.1"
lazy_static = "1.4"

[dependencies.rocket_cors]
git = "https://github.com/lawliet89/rocket_cors"
branch = "master"
