[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "=0.2.95"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-net = "0.6"
gloo-timers = "0.3"
gloo-console = "0.3"

# JSON deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# For web_sys window access
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlImageElement",
    "CssStyleDeclaration",
    "MouseEvent",
    "DragEvent",
    "DataTransfer",
    "console",
    "HtmlAnchorElement"
]} 

# Chrono wasm support
chrono = { version = "0.4", features = ["wasmbind"] }
